--- a/ABCD_analysis.Rmd
+++ b/ABCD_analysis.Rmd
@@ -5,11 +5,7 @@ date: "October 9, 2017"
 output:
   pdf_document: default
   html_document: default
-header-includes:
-  - \usepackage{color}
 ---
-\definecolor{coolblack}{rgb}{0.0, 0.18, 0.39}
-\definecolor{violet}{rgb}{0.19, 0.55, 0.91}
 ```{r,echo=FALSE,warning=FALSE}
 #Loading library
 library(ggplot2)
@@ -19,7 +15,7 @@ library(readr)
 
 ```{r,echo=FALSE}
 #Initialize variables
-total_participant <- 30
+total_participant <- 33
 total_vsl_trial <- 24 #number of trials in the familiarization block
 total_tsl_trial <- 48
 length_vsl <- 533 #number of rows in a vsl excel file
@@ -29,15 +25,17 @@ total_test_trial <- 32
 
 
 ```{r,echo=FALSE}
-#importing files
+#Note: The code below is to work on the raw files to combine them. You can import the already combined vsl from /abcd/raw/summary/vsl.csv and tsl files if you just want to look at the analysis part.
 
-
+#importing raw files
 tsl <- list()
 vsl <- list()
 vsl_par_id <- NULL
 tsl_par_id <- NULL
-path <- "C:/Users/Qlab/Downloads/sl-analysis/tsl/data/"
-files <- list.files(path=path, pattern="*.csv") 
+path <- "C:/Users/Qlab/Downloads/abcd/raw/"  
+files <- list.files(path=path, pattern="*tsl.csv") 
+vsl_files <- list.files(path=path, pattern="*vsl.csv")
+
 for(file in files)
 {
    
@@ -47,13 +45,11 @@ for(file in files)
 }
 for(file in files){tsl <- append(tsl,list(eval(parse(text=file))))}
 
-vsl_path <- "C:/Users/Qlab/Downloads/sl-analysis/vsl/"
-vsl_files <- list.files(path=vsl_path, pattern="*.csv")
 for(vslfile in vsl_files)
 {
     assign(
         gsub(" ","",vslfile), 
-        read.csv(paste(vsl_path,vslfile,sep="")))
+        read.csv(paste(path,vslfile,sep="")))
 }
 for(text in vsl_files){vsl <- append(vsl,list(eval(parse(text=text))))}
 
@@ -66,11 +62,8 @@ for (i in seq(from=1,to=length(tsl$responses),by=length_tsl)){tsl_par_id<-append
 vsl$par_id <- vsl_par_id
 tsl$par_id <- tsl_par_id
 
-list_vsl_id <- unique(vsl$par_id)
-list_tsl_id <- unique(tsl$par_id)
-
 #Group set up
-DD <- list("ABCD_1711", "ABCD_1714", "ABCD_1727", "ABCD_1735", "ABCD_1751", "ABCD_1756", "ABCD_1764", "ABCD_1767", "ABCD_1768")
+DD <- list("ABCD_1711", "ABCD_1714", "ABCD_1727", "ABCD_1735", "ABCD_1751", "ABCD_1756", "ABCD_1764", "ABCD_1767", "ABCD_1768", "ABCD_1776","ABCD_1777","ABCD_1778")
 
 TYP <- list("ABCD_1702", "ABCD_1703", "ABCD_1705", "ABCD_1708", "ABCD_1709", "ABCD_1710", "ABCD_1716", "ABCD_1720", "ABCD_1721", "ABCD_1724", "ABCD_1725", "ABCD_1728", "ABCD_1729", "ABCD_1730", "ABCD_1732", "ABCD_1734", "ABCD_1736", "ABCD_1739", "ABCD_1742", "ABCD_1747", "ABCD_1749", "ABCD_1754" )
 group <- NULL
@@ -89,12 +82,17 @@ for (i in seq(from=1,to=length(vsl$par_id),by=1))
 vsl$group <- groupv
 
 
+#Get the ID of every participant
+list_tsl_id <- unique(tsl$par_id)
+list_vsl_id <- unique(vsl$par_id)
+
+
 language_1 = list(1,2,2,2,1,1,2,1,1,2,1,2,1,1,2,2,1,1,2,1,2,2,1,2,2,2,1,2,1,2,1,1)
 language_2 = list(1,1,2,1,1,1,2,2,2,2,1,1,1,2,2,1,2,2,1,1,2,1,2,1,2,1,2,1,1,2,2,2)
 ```
 
 ```{r,echo=FALSE}
-#Clean data
+#Clean data: remove file extension and path of the stimuli so the format of the stimuli match with the target
 
 vsl$stimulus<- gsub(".jpg","",vsl$stimulus)
 vsl$stimulus<- gsub("../../images/","",vsl$stimulus)
@@ -103,115 +101,7 @@ tsl$stimulus<- gsub(".wav","",tsl$stimulus)
 tsl$stimulus<- gsub("../../tones/","",tsl$stimulus)
 ```
 
-
-
-```{r,echo=FALSE,warning=FALSE}
-vsl_acc <- vsl[which(vsl$trial_index<614 & vsl$trial_index>309),] #the test block starts and ends with this index
-tsl_acc <- tsl[which(tsl$trial_index<831 & tsl$trial_index>608),]
-vsl_cond <- NULL
-for (i in seq(from=1,to=length(vsl$cond),by=length_vsl)){vsl_cond<-append(vsl_cond,as.character(vsl[i,]$cond))}
-tsl_cond <- NULL
-for (i in seq(from=1,to=length(tsl$cond),by=length_tsl)){tsl_cond<-append(tsl_cond,as.character(tsl[i,]$cond))}
-
-ans <- NULL
-keyv <- NULL
-subj <- NULL
-cond<- NULL
-
-#vsl acc
-  row_numberv <- which(vsl_acc$key_press != -1 & vsl_acc$stimulus=="")
-  for (i in row_numberv){
-    ans<-append(ans,vsl_acc[i,]$key_press)
-    subj <- append(subj,vsl_acc[i,]$par_id)
-    cond <- append(cond,vsl_acc[i,]$group)
-  }
-  
-vsl_accuracy <- data.frame(ans,subj,cond)
-
-#tsl acc
-ans <- NULL
-keyt <- NULL
-subj <- NULL
-cond<- NULL
-
-row_numbert <- which(tsl_acc$key_press != -1 & (tsl_acc$trial_index-613)%%7==0) #since there is no stimuli recorded for the test block of tsl, we can only get the correct answer by counting the index. The test starts at 613 and the response begins every 7 index after that
-  for (i in row_numbert){
-    ans<-append(ans,tsl_acc[i,]$key_press)
-    subj <- append(subj,tsl_acc[i,]$par_id)
-   cond <- append(cond,vsl_acc[i,]$group)
-
-  }
- 
-tsl_accuracy <- data.frame(ans,subj,cond)
-
-for(cond in vsl_cond){
-    if (cond=="lang1"){keyv<-append(keyv,language_1)}
-    else if (cond=="lang2"){keyv<-append(keyv,language_2)}}
-
-for(cond in tsl_cond){
-    if (cond=="lang1"){keyt<-append(keyt,language_1)}
-    else if (cond=="lang2"){keyt<-append(keyt,language_2)}}
-
-
-
-vsl_accuracy$key <- keyv
-tsl_accuracy$key <- keyt
-
-vsl_accuracy$ans <- gsub(50,2,vsl_accuracy$ans)
-vsl_accuracy$ans <- gsub(49,1,vsl_accuracy$ans)
-
-tsl_accuracy$ans <- gsub(37,1,tsl_accuracy$ans)
-tsl_accuracy$ans <- gsub(39,2,tsl_accuracy$ans)
-
-corr <- NULL
-corrt <- NULL
-
-for (i in seq(from=1,to=length(vsl_accuracy$ans),by=1)) {corr<-append(corr,as.numeric(vsl_accuracy[i,]$ans==vsl_accuracy[i,]$key))}
-vsl_accuracy$corr <- corr
-subj_corr <- NULL
-for (id in list_vsl_id) {subj_corr <- append(subj_corr,round(sum(vsl_accuracy$corr[vsl_accuracy$subj==id])/total_test_trial,digits=3))}
-vsl_acc_table <- data.frame(list_vsl_id,subj_corr,vsl_cond)
-
-for (i in seq(from=1,to=length(tsl_accuracy$ans),by=1)) {corrt<-append(corrt,as.numeric(tsl_accuracy[i,]$ans==tsl_accuracy[i,]$key))}
-tsl_accuracy$corr <- corrt
-subj_corrt <- NULL
-for (id in list_tsl_id) {subj_corrt <- append(subj_corrt,round(sum(tsl_accuracy$corr[tsl_accuracy$subj==id])/total_test_trial,digits=3))}
-tsl_acc_table <- data.frame(list_tsl_id,subj_corrt,tsl_cond)
-DD_acc_vsl <- NULL
-DD_acc_tsl <- NULL
-TYP_acc_vsl <- NULL
-TYP_acc_tsl <- NULL
-
-for(id in DD){
-  DD_acc_vsl<- append(DD_acc_vsl,vsl_acc_table$subj_corr[vsl_acc_table$list_vsl_id==id])
-  DD_acc_tsl<- append(DD_acc_tsl,tsl_acc_table$subj_corr[tsl_acc_table$list_tsl_id==id])
-}
-
-for(id in TYP){
-  TYP_acc_vsl<- append(TYP_acc_vsl,vsl_acc_table$subj_corr[vsl_acc_table$list_vsl_id==id])
-  TYP_acc_tsl<- append(TYP_acc_tsl,tsl_acc_table$subj_corr[tsl_acc_table$list_tsl_id==id])
-}
-mean_DD_vsl <- mean(DD_acc_vsl,na.rm=TRUE)
-mean_DD_tsl <- mean(DD_acc_tsl,na.rm=TRUE)
-mean_TYP_vsl <- mean(TYP_acc_vsl,na.rm=TRUE)
-mean_TYP_tsl <- mean(TYP_acc_tsl,na.rm=TRUE)
-DD_acc_col <- rbind(mean_DD_tsl,mean_DD_vsl)
-TYP_acc_col <- rbind(mean_TYP_tsl,mean_TYP_vsl)
-compare_acc_table <- cbind(DD_acc_col,TYP_acc_col)
-colnames(compare_acc_table) <- c("Dylexia", "Typical")
-rownames(compare_acc_table) <- c("TSL accuracy","VSL accuracy")
-colnames(tsl_acc_table) <- c("Participant ID", "Percentage correct","Condition")
-colnames(vsl_acc_table) <- c("Participant ID", "Percentage correct","Condition")
-
-
-DDtestv <- t.test(DD_acc_vsl,mu=0.5)
-DDtestt <- t.test(DD_acc_tsl,mu=0.5)
-TYPtestv <- t.test(TYP_acc_vsl,mu=0.5)
-TYPtestt <- t.test(TYP_acc_tsl,mu=0.5)
-
-```
-#\textcolor{coolblack}{VSL}
-
+#Compute RT for VSL
 ```{r,echo=FALSE}
 compute_visual <- function(data)
 {
@@ -220,84 +110,102 @@ id <- NULL
 trial <- NULL
 target <- NULL
 group_cond <- NULL
-row_number <- which(vsl$targ==vsl$stimulus)
+
+row_number <- which(vsl$targ==vsl$stimulus) #extract rows in which stimuli match with target
 for (i in row_number){
         rt_col <- append(rt_col,vsl[i,][,"rt"])
         trial <- append(trial,vsl[i,][,"trial_index"])
         id <- append(id,vsl[i,]$par_id)
         group_cond <- append(group_cond,vsl[i,]$group)
     if (vsl[i-1,][,"rt"]!=-1){
-        rt_col[(match(i,row_number))] <- vsl[i-1,][,"rt"]
-        
+        rt_col[(match(i,row_number))] <- -(1000-vsl[i-1,][,"rt"])
     }}
-rt_df1 <- data.frame(trial,rt_col,id,group_cond)
-fam_block <- vsl[which(vsl$trial_index<303 & vsl$trial_index>14),] #the familiarization block starts with index number 15 and ends with index 302
-fam_trial <- rt_df1[which(rt_df1$trial<303 & rt_df1$trial>14), ]
+
+rt_df1 <- data.frame(trial,rt_col,id,group_cond) 
+#NOTE: Depending on your version of R and your setting, the lines below may run inaccurately. You can check type rt_df1 after running this line to check if it returns a correct data frame. If not, run these two lines instead: 
+# rt_df1 <- data.frame(unlist(trial),unlist(rt_col),id,group_cond) 
+# colnames(rt_df1) <- c("trial","rt_col","id","group_cond")
+
+fam_block <- vsl[which(vsl$trial_index<=300 & vsl$trial_index>=13),] #the familiarization block starts with index number 13 and ends with index 300
+fam_trial <- rt_df1[which(rt_df1$trial<=300 & rt_df1$trial>=13), ]
 reindex <- rep(1:total_vsl_trial,total_participant)
 fam_trial$reindex <- reindex
+fam_trial <- fam_trial[which(!is.na(fam_trial$group_cond)),]
+
 hit_rate <- NULL
 miss_rate <- NULL
 correct_rejection <- NULL
 false_alarm <- NULL
 mean_rt <- NULL
 rt_slope <- NULL
-timeline <- c(rep("first half",total_vsl_trial/2),rep("second half",total_vsl_trial/2))
-timeline <- rep(timeline,total_participant)
-fam_trial$timeline <- timeline
 mean_table <- fam_trial[which(fam_trial$rt_col!=-1 & fam_trial$rt_col<1000 & fam_trial$rt_col>-1000), ] #only accept answers in range of -1000 < x < 1000
+
+
+list_vsl_id <- unique(mean_table$id)
 
 for(id in list_vsl_id){
   mean_rt<-append(mean_rt,round(mean(mean_table$rt_col[mean_table$id==id]),digits=3))
   rt_slope <-append(rt_slope,round(summary(lm(mean_table$rt_col[mean_table$id==id]~mean_table$trial[mean_table$id==id]))$coefficient[2,1],digits=3))
   hit_rate<-append(hit_rate,round(sum(!is.na(mean_table$rt_col[mean_table$id==id]))/total_vsl_trial,digits =2))
   miss_rate<-append(miss_rate,round(sum(fam_trial$rt_col[fam_trial$id==id]==-1)/total_vsl_trial,digits=2))
-  correct_rejection <- append(correct_rejection, round(sum(fam_block$rt[fam_block$par_id==id]==-1 & fam_block$targ[fam_block$par_id==id]!=fam_block$stimulus[fam_block$par_id==id])/264,digits=2)) #264 is the total number of stimuli in the familiarization block
-  false_alarm <- append(false_alarm, round(sum(fam_block$rt[fam_block$par_id==id]!=-1 & fam_block$targ[fam_block$par_id==id]!=fam_block$stimulus[fam_block$par_id==id])/264,digits=2))
+  correct_rejection <- append(correct_rejection, round(sum(fam_block$rt[fam_block$par_id==id]==-1 & fam_block$targ[fam_block$par_id==id]!=fam_block$stimulus[fam_block$par_id==id])/264,digits=3)) #264 is the total number of stimuli in the familiarization block
+  false_alarm <- append(false_alarm, round(sum(fam_block$rt[fam_block$par_id==id]!=-1 & fam_block$targ[fam_block$par_id==id]!=fam_block$stimulus[fam_block$par_id==id])/264,digits=3))
 }
 
 subj_table <- data.frame(list_vsl_id,mean_rt, rt_slope,hit_rate, miss_rate,correct_rejection,false_alarm)
 dprime<-NULL
-for (i in seq(from=1,to=length(subj_table$list_vsl_id),by=1)){dprime<-append(dprime,qnorm(subj_table[i,]$hit_rate-0.00000001)-qnorm(subj_table[i,]$false_alarm))} #minus 0.000000001 to avoid perfect hit rate
+for (i in seq(from=1,to=length(subj_table$list_vsl_id),by=1)){dprime<-append(dprime,qnorm(subj_table[i,]$hit_rate-0.00000001)-qnorm(subj_table[i,]$false_alarm+0.000000001))} #minus 0.000000001 to avoid perfect hit rate
 subj_table$dprime <- dprime
 
-DD_prime_v <- NULL
-TYP_prime_v <- NULL
-for (i in DD){DD_prime_v <- append(DD_prime_v,subj_table$dprime[subj_table$list_vsl_id==i])}
-for (i in TYP){TYP_prime_v <- append(TYP_prime_v,subj_table$dprime[subj_table$list_vsl_id==i])}
+#colnames(subj_table) <- c("VSL_ID","mean_rt", "rt_slope","hit", "miss","corr_rejection","false_alarm","dprime")
+#print(kable(subj_table,format = "pandoc"))
 
-dprimetestv <<- wilcox.test(DD_prime_v,TYP_prime_v)
+group <- NULL
+for (i in seq(from=1,to=length(subj_table$list_vsl_id),by=1))
+    {if (subj_table[i,]$list_vsl_id %in% TYP)
+    {group[i]<-"TYP"}
+    else if (subj_table[i,]$list_vsl_id %in% DD)
+    {group[i] <- "DD"}}
+subj_table$group <- group
 
-colnames(subj_table) <- c("VSL_ID","mean_rt", "rt_slope","hit", "miss","corr_rejection","false_alarm","dprime")
-print(kable(subj_table,format = "pandoc"))
+vrtdd <- t.test(subj_table$rt_slope[subj_table$group=="DD"],mu=0,alternative="less")
+vrttyp <- t.test(subj_table$rt_slope[subj_table$group=="TYP"],mu=0,alternative="less")
 
+model3 <- wilcox.test(dprime)
+#print(model3)
+print(vrtdd)
+print(vrttyp)
 return(mean_table)
 }
 ```
 
-##\textcolor{blue}{Summary Table}
+#t.test for rt slope
+
 ```{r,echo=FALSE,warning=FALSE}
 fam_trial_vsl <- compute_visual()
 
-model1v <- lm(rt_col~reindex*group_cond,data=fam_trial_vsl)
-model2v <- aov(rt_col~group_cond*timeline + Error(id/timeline),data=fam_trial_vsl)
+model1 <- lm(rt_col~reindex*group_cond,data=fam_trial_vsl)
+#model2 <- aov(rt_col~group_cond*timeline + Error(id/timeline),data=fam_trial_vsl)
 ```
 
-##\textcolor{blue}{Plot of VSL}
+##Linear regression model
+```{r,echo=FALSE}
+print(summary(model1))
+```
+
+```{r,echo=FALSE,warning=FALSE}
+#print(model2)
+#print(summary(model2))
+
+```
+
+##Plot of VSL
 ```{r,echo=FALSE}
 ggplot(fam_trial_vsl,aes(y=rt_col,x=reindex))+geom_point(color='deepskyblue3') + geom_smooth(method='lm') + labs(x="Trial Index", y="Response time (ms)",title="Resposne time by trial index in VSL")
 ```
-```{r,echo=FALSE}
-par(mfrow=c(1,2))
-boxplot(fam_trial_vsl$rt_col[fam_trial_vsl$reindex<total_vsl_trial/2], main="RT - first half of the trials",col="deepskyblue4",pars=list(ylim=c(100,800)))
-boxplot(fam_trial_vsl$rt_col[fam_trial_vsl$reindex>total_vsl_trial/2], main="RT - latter half of the trials",col="deepskyblue4")
-```
 
-##\textcolor{blue}{VSL Accuracy across subjects}
-```{r,echo=FALSE}
-print(kable(vsl_acc_table))
-```
 
-#\textcolor{coolblack}{TSL}
+#Compute RT for TSL
 ```{r,echo=FALSE}
 compute_aud <- function(data)
 {
@@ -315,28 +223,34 @@ for (i in row_number){
         id <- append(id,tsl[i,]$par_id)
          group_cond <- append(group_cond,tsl[i,]$group)
    if (tsl[i+1,][,"rt"]!=-1000 & tsl[i+1,][,"rt"]<0){
-        rt_col[(match(i,row_number))] <- 480-tsl[i+1,][,"rt"]}
+        rt_col[(match(i,row_number))] <- 380-tsl[i+1,][,"rt"]}
     
     if (tsl[i-1,][,"rt"]>0){
-        rt_col[(match(i,row_number))] <- 480-tsl[i-1,][,"rt"]
-        
-    }}
+        rt_col[(match(i,row_number))] <- 480-tsl[i-1,][,"rt"]}
+   if (tsl[i+1,][,"rt"]!=-1000 & tsl[i+1,][,"rt"]>0){
+    rt_col[(match(i,row_number))] <- 580+tsl[i+1,][,"rt"]}
+         
+    }
+
+ 
 rt_df1 <- data.frame(trial,rt_col,id,group_cond)
 fam_block <- tsl[which(tsl$trial_index<603 & tsl$trial_index>26),] #fam block in tsl starts at index 27 and ends at index 602
 fam_trial <- rt_df1[which(rt_df1$trial<603 & rt_df1$trial>26), ]
+
 reindex <- rep(1:total_tsl_trial,total_participant)
 fam_trial$reindex <- reindex
-timeline <- c(rep("first half",total_tsl_trial/2),rep("second half",total_tsl_trial/2))
-timeline <- rep(timeline,total_participant)
-fam_trial$timeline <- timeline
+fam_trial <- fam_trial[which(!is.na(fam_trial$group_cond)),]
+
 mean_table <- fam_trial[which(fam_trial$rt_col!=-1000),]
-mean_table <- fam_trial[which(fam_trial$rt_col<580 & fam_trial$rt_col>-380), ] #only accepts answer in range of -380 < x < 580 (one stimulus before and one stimulus after the target)
+mean_table <- fam_trial[which(fam_trial$rt_col<960 & fam_trial$rt_col>-960), ] #only accepts answer in range of -380 < x < 580 (one stimulus before and one stimulus after the target)
 hit_rate <- NULL
 miss_rate <- NULL
 correct_rejection <- NULL
 false_alarm <- NULL
 mean_rt <- NULL
 rt_slope <- NULL
+list_tsl_id <- unique(mean_table$id)
+
 for(id in list_tsl_id){
   mean_rt<-append(mean_rt,round(mean(mean_table$rt_col[mean_table$id==id]),digits=3))
   rt_slope <-append(rt_slope,round(summary(lm(mean_table$rt_col[mean_table$id==id]~mean_table$trial[mean_table$id==id]))$coefficient[2,1],digits=3))
@@ -352,47 +266,64 @@ dprime<-NULL
 for (i in seq(from=1,to=length(subj_table$list_tsl_id),by=1)){dprime<-append(dprime,qnorm(subj_table[i,]$hit_rate-0.00000001)-qnorm(subj_table[i,]$false_alarm))}
 subj_table$dprime <- dprime
 
-DD_prime_t <- NULL
-TYP_prime_t <- NULL
-for (i in DD){DD_prime_t <- append(DD_prime_t,subj_table$dprime[subj_table$list_tsl_id==i])}
-for (i in TYP){TYP_prime_t <- append(TYP_prime_t,subj_table$dprime[subj_table$list_tsl_id==i])}
+#colnames(subj_table) <- c("TSL_ID","mean_rt", "rt_slope","hit", "miss","corr_rejection","false_alarm","dprime")
 
-dprimetest <<- wilcox.test(DD_prime_t,TYP_prime_t)
+#print(kable(subj_table))
+#model3 <- wilcox.test(dprime)
+#print(model3)
 
-colnames(subj_table) <- c("TSL_ID","mean_rt", "rt_slope","hit", "miss","corr_rejection","false_alarm","dprime")
-print(kable(subj_table,format = "pandoc"))
+
+group <- NULL
+for (i in seq(from=1,to=length(subj_table$list_tsl_id),by=1))
+    {if (subj_table[i,]$list_tsl_id %in% TYP)
+    {group[i]<-"TYP"}
+    else if (subj_table[i,]$list_tsl_id %in% DD)
+    {group[i] <- "DD"}}
+subj_table$group <- group
+
+print(t.test(subj_table$rt_slope[subj_table$group=="DD"],mu=0,alternative="less"))
+print(t.test(subj_table$rt_slope[subj_table$group=="TYP"],mu=0,alternative="less"))
+
+
 return(mean_table)
 }
 ```
 
-##\textcolor{blue}{Summary Table}
+#t.test for RT Slope
 ```{r,echo=FALSE,warning=FALSE}
 fam_trial_tsl <- compute_aud()
 
 model1 <- lm(rt_col~reindex*group_cond,data=fam_trial_tsl)
-model2 <- aov(rt_col~group_cond*timeline + Error(id/timeline),data=fam_trial_tsl)
+#model2 <- aov(rt_col~group_cond*timeline + Error(id/timeline),data=fam_trial_tsl)
 ```
 
-##\textcolor{blue}{Plot of TSL}
+```{r,echo=FALSE,warning=FALSE}
+#print(model2)
+#print(summary(model2))
+```
+
+
+##Linear regression model
+```{r,echo=FALSE}
+print(summary(model1))
+```
+
+##Plot of TSL
 ```{r,echo=FALSE}
 ggplot(fam_trial_tsl,aes(y=rt_col,x=reindex))+geom_point(color='deepskyblue3') + geom_smooth(method='lm') + labs(x="Trial Index", y="Response time (ms)",title="Resposne time by trial index in TSL")
 ```
 
+
 ```{r,echo=FALSE}
-par(mfrow=c(1,2))
-boxplot(fam_trial_tsl$rt_col[fam_trial_tsl$reindex<total_tsl_trial/2], main="RT - first half of the trials",col="deepskyblue4")
-boxplot(fam_trial_tsl$rt_col[fam_trial_tsl$reindex>total_tsl_trial/2], main="RT - latter half of the trials",col="deepskyblue4")
+##Boxplot of the first half of the trials is significantly greater than the latter half of the trial
+
+#par(mfrow=c(1,2))
+#boxplot(fam_trial_tsl$rt_col[fam_trial_tsl$reindex<total_tsl_trial/2], main="RT - first half of the trials",col="deepskyblue4")
+#boxplot(fam_trial_tsl$rt_col[fam_trial_tsl$reindex>total_tsl_trial/2], main="RT - latter half of the trials",col="deepskyblue4")
 
 ```
 
-##\textcolor{blue}{TSL Accuracy across subjects}
-```{r,echo=FALSE}
-print(kable(tsl_acc_table))
-```
-
-#\textcolor{coolblack}{Compare between Dylexia and Typical group}
-
-##\textcolor{blue}{Performance in familiarization phase}
+#Plot by group
 ```{r,fig.width=10, fig.height=6, echo=FALSE}
 DD_mean_vsl <- NULL
 DD_mean_tsl <- NULL
@@ -426,23 +357,161 @@ TYP_col <- rbind(TYP_mean_tsl,TYP_mean_vsl,TYP_tsl_hit_rate,TYP_vsl_hit_rate,num
 compare_table <- cbind(DD_col,TYP_col)
 colnames(compare_table) <- c("Dylexia","Typical")
 rownames(compare_table) <- c("RT_TSL","RT_VSL","Hit_rate_tsl","Hit_rate_vsl","Number of participants")
-print(kable(compare_table))
+#print(kable(compare_table))
 par(mfrow=c(1,2))
 
+#Plot 
 qplot(reindex,rt_col,data=fam_trial_vsl,facets=(. ~ fam_trial_vsl$group_cond),color= group_cond, main="VSL RT by group", ylab="Response time", xlab="Trial index") + geom_smooth(method='lm') + scale_color_discrete(name="Group",labels=c("Dylexia","Typical"))
 qplot(reindex,rt_col,data=fam_trial_tsl,facets=(. ~ fam_trial_tsl$group_cond),color= group_cond,main="TSL RT by group",ylab="Response time", xlab="Trial index") + geom_smooth(method='lm') + scale_color_discrete(name="Group",labels=c("Dylexia","Typical"))
 
 ```
 
-##\textcolor{blue}{Accuracy between Dylexia and Typical group}
-```{r,echo=FALSE}
-print(kable(compare_acc_table))
+#Compute accuracy
+```{r,echo=FALSE,warning=FALSE}
+vsl_acc <- vsl[which(vsl$trial_index<614 & vsl$trial_index>309),] #the test block starts and ends with this index
+tsl_acc <- tsl[which(tsl$trial_index<831 & tsl$trial_index>608),]
+vsl_cond <- NULL
+for (i in seq(from=1,to=length(vsl$cond),by=length_vsl)){vsl_cond<-append(vsl_cond,as.character(vsl[i,]$cond))}
+tsl_cond <- NULL
+for (i in seq(from=1,to=length(tsl$cond),by=length_tsl)){tsl_cond<-append(tsl_cond,as.character(tsl[i,]$cond))}
+
+ans <- NULL
+keyv <- NULL
+subj <- NULL
+cond<- NULL
+
+#Extract the response for the 2AFC task
+#vsl acc
+  row_numberv <- which(vsl_acc$key_press != -1 & vsl_acc$stimulus=="")
+  for (i in row_numberv){
+    ans<-append(ans,vsl_acc[i,]$key_press)
+    subj <- append(subj,vsl_acc[i,]$par_id)
+    cond <- append(cond,vsl_acc[i,]$group)
+  }
+  
+vsl_accuracy <- data.frame(ans,subj,cond)
+
+#tsl acc
+ans <- NULL
+keyt <- NULL
+subj <- NULL
+cond<- NULL
+
+row_numbert <- which(tsl_acc$key_press != -1 & (tsl_acc$trial_index-613)%%7==0) #since there is no stimuli recorded for the test block of tsl, we can only get the correct answer by counting the index. The test starts at 613 and the response begins every 7 index after that
+  for (i in row_numbert){
+    ans<-append(ans,tsl_acc[i,]$key_press)
+    subj <- append(subj,tsl_acc[i,]$par_id)
+   cond <- append(cond,vsl_acc[i,]$group)
+
+  }
+ 
+tsl_accuracy <- data.frame(ans,subj,cond)
+
+#Match the language condition with the correct answer key
+for(cond in vsl_cond){
+    if (cond=="lang1"){keyv<-append(keyv,language_1)}
+    else if (cond=="lang2"){keyv<-append(keyv,language_2)}}
+
+for(cond in tsl_cond){
+    if (cond=="lang1"){keyt<-append(keyt,language_1)}
+    else if (cond=="lang2"){keyt<-append(keyt,language_2)}}
+
+
+
+vsl_accuracy$key <- keyv
+tsl_accuracy$key <- keyt
+
+#Substitute the key press (49,50) with the answer (1,2)
+vsl_accuracy$ans <- gsub(50,2,vsl_accuracy$ans)
+vsl_accuracy$ans <- gsub(49,1,vsl_accuracy$ans)
+
+tsl_accuracy$ans <- gsub(37,1,tsl_accuracy$ans)
+tsl_accuracy$ans <- gsub(39,2,tsl_accuracy$ans)
+
+corr <- NULL
+corrt <- NULL
+
+#Loop through and count the correct answer
+for (i in seq(from=1,to=length(vsl_accuracy$ans),by=1)) {corr<-append(corr,as.numeric(vsl_accuracy[i,]$ans==vsl_accuracy[i,]$key))}
+vsl_accuracy$corr <- corr
+subj_corr <- NULL
+for (id in list_vsl_id) {subj_corr <- append(subj_corr,round(sum(vsl_accuracy$corr[vsl_accuracy$subj==id])/total_test_trial,digits=3))}
+vsl_acc_table <- data.frame(list_vsl_id,subj_corr,vsl_cond)
+
+for (i in seq(from=1,to=length(tsl_accuracy$ans),by=1)) {corrt<-append(corrt,as.numeric(tsl_accuracy[i,]$ans==tsl_accuracy[i,]$key))}
+tsl_accuracy$corr <- corrt
+subj_corrt <- NULL
+for (id in list_tsl_id) {subj_corrt <- append(subj_corrt,round(sum(tsl_accuracy$corr[tsl_accuracy$subj==id])/total_test_trial,digits=3))}
+tsl_acc_table <- data.frame(list_tsl_id,subj_corrt,tsl_cond)
+
+#Look into group performance between Dyl and Typ
+DD_acc_vsl <- NULL
+DD_acc_tsl <- NULL
+TYP_acc_vsl <- NULL
+TYP_acc_tsl <- NULL
+
+for(id in DD){
+  DD_acc_vsl<- append(DD_acc_vsl,vsl_acc_table$subj_corr[vsl_acc_table$list_vsl_id==id])
+  DD_acc_tsl<- append(DD_acc_tsl,tsl_acc_table$subj_corr[tsl_acc_table$list_tsl_id==id])
+}
+
+for(id in TYP){
+  TYP_acc_vsl<- append(TYP_acc_vsl,vsl_acc_table$subj_corr[vsl_acc_table$list_vsl_id==id])
+  TYP_acc_tsl<- append(TYP_acc_tsl,tsl_acc_table$subj_corr[tsl_acc_table$list_tsl_id==id])
+}
+mean_DD_vsl <- mean(DD_acc_vsl,na.rm=TRUE)
+mean_DD_tsl <- mean(DD_acc_tsl,na.rm=TRUE)
+mean_TYP_vsl <- mean(TYP_acc_vsl,na.rm=TRUE)
+mean_TYP_tsl <- mean(TYP_acc_tsl,na.rm=TRUE)
+DD_acc_col <- rbind(mean_DD_tsl,mean_DD_vsl)
+TYP_acc_col <- rbind(mean_TYP_tsl,mean_TYP_vsl)
+compare_acc_table <- cbind(DD_acc_col,TYP_acc_col)
+colnames(compare_acc_table) <- c("Dylexia", "Typical")
+rownames(compare_acc_table) <- c("TSL accuracy","VSL accuracy")
+
+
+
+
+#Simple t test
+
+t.test(DD_acc_vsl,mu=0.5,alternative = "greater")
+t.test(DD_acc_tsl,mu=0.5,alternative = "greater")
+
+t.test(TYP_acc_vsl,mu=0.5,alternative = "greater")
+t.test(TYP_acc_tsl,mu=0.5,alternative = "greater")
 
 ```
 
 
-## \textcolor{blue}{A line plot to compare mean accuracy of each group accross 32 trials}
 ```{r,echo=FALSE}
+
+##VSL Accuracy across subjects
+
+
+#print(kable(vsl_acc_table))
+```
+
+
+```{r,echo=FALSE}
+##TSL Accuracy across subjects
+
+#print(kable(tsl_acc_table))
+```
+
+#A t-test to compare between Dylexia and Typical group
+##In tsl
+```{r,echo=FALSE}
+t.test(DD_acc_tsl,TYP_acc_tsl)
+```
+
+##In vsl
+```{r,echo=FALSE}
+t.test(DD_acc_vsl,TYP_acc_vsl)
+```
+
+```{r,echo=FALSE}
+# A line plot to compare mean accuracy of each group accross 32 trials
+
  index <- rep(1:total_test_trial,total_participant)
 indx <- c(1:total_test_trial)
 vsl_accuracy$index <- index
@@ -464,12 +533,12 @@ tt <- cbind(TYP_tsl_point,indx,Ti)
 vtable <- data.frame(rbind(dv,tv))
 ttable <- data.frame(rbind(dt,tt))
 
-ggplot(data=vtable,aes(x=as.numeric(indx),y=as.numeric(paste(DD_vsl_point)), color=DDi,group=DDi),ylim=c(0,1)) + geom_point() + geom_line() + ggtitle("Accuracy accross trials in VSL") + xlab("Trial index")+ylab("Accuracy (%)") + scale_color_discrete(name="Group",labels=c("Dylexia","Typical"))
-ttable <- data.frame(rbind(dt,tt))
-ggplot(data=ttable,aes(x=as.numeric(indx),y=as.numeric(paste(DD_tsl_point)), color=DDi,group=DDi),ylim=c(0,1)) + geom_point() + geom_line() + ggtitle("Accuracy accross trials in TSL") + xlab("Trial index")+ylab("Accuracy (%)") + scale_color_discrete(name="Group",labels=c("Dylexia","Typical"))
+#ggplot(data=vtable,aes(x=as.numeric(indx),y=as.numeric(paste(DD_vsl_point)), color=DDi,group=DDi),ylim=c(0,1)) + geom_point() + geom_line() + ggtitle("Accuracy accross trials in VSL") + xlab("Trial index")+ylab("Accuracy (%)") + scale_color_discrete(name="Group",labels=c("Dylexia","Typical"))
+#ttable <- data.frame(rbind(dt,tt))
+#ggplot(data=ttable,aes(x=as.numeric(indx),y=as.numeric(paste(DD_tsl_point)), color=DDi,group=DDi),ylim=c(0,1)) + geom_point() + geom_line() + ggtitle("Accuracy accross trials in TSL") + xlab("Trial index")+ylab("Accuracy (%)") + scale_color_discrete(name="Group",labels=c("Dylexia","Typical"))
 ```
 
-##\textcolor{blue}{A box plot to compare the average accuracy between each group}
+#A box plot to compare the average accuracy between each group
 ```{r,fig.width=10, fig.height=10, echo=FALSE}
 par(mfrow=c(2,2))
 boxplot(DD_vsl_point, main="Dylexia-VSL",col="deepskyblue4", pars=list(ylim=c(0.2,1)))
@@ -478,75 +547,4 @@ boxplot(TYP_vsl_point, main="Typical-VSL",col="deepskyblue4", pars=list(ylim=c(0
 boxplot(DD_tsl_point, main="Dylexia-TSL",col="deepskyblue4", pars=list(ylim=c(0.2,1)))
 
 boxplot(TYP_vsl_point, main="Typical-TSL",col="deepskyblue4", pars=list(ylim=c(0.2,1)))
-```
-
-
-##\textcolor{coolblack}{In vsl}
-
-
-##\textcolor{blue}{Linear regression model}
-```{r,echo=FALSE}
-print(summary(model1v))
-```
-##\textcolor{blue}{Anova table}
-```{r,echo=FALSE,warning=FALSE}
-print(model2)
-print(summary(model2v))
-
-```
-
-## \textcolor{blue}{Wilcox test between dprime of Dylexia and Typical}
-
-```{r,echo=FALSE}
-print(dprimetestv)
-
-```
-## \textcolor{blue}{t-test to make sure that the accuracy of each group is above chance}
-### \textcolor{violet}{t-test of Dylexia group}
-```{r,echo=FALSE}
-print(DDtestv)
-```
-
-### \textcolor{violet}{t-test of Typical group}
-```{r,echo=FALSE}
-print(TYPtestv)
-```
-##\textcolor{blue}{A t-test to compare accuracy between Dylexia and Typical group}
-
-```{r,echo=FALSE}
-t.test(DD_acc_vsl,TYP_acc_vsl)
-```
-
-##\textcolor{coolblack}{In tsl}
-
-##\textcolor{blue}{Linear regression model}
-```{r,echo=FALSE}
-print(summary(model1))
-```
-##\textcolor{blue}{Anova table}
-```{r,echo=FALSE,warning=FALSE}
-print(model2)
-print(summary(model2))
-```
-
-## \textcolor{blue}{Wilcox test between dprime of Dylexia and Typical}
-
-```{r,echo=FALSE}
-print(dprimetest)
-
-```
-## \textcolor{blue}{t-test to make sure that the accuracy of each group is above chance}
-### \textcolor{violet}{t-test of Dylexia group}
-```{r,echo=FALSE}
-print(DDtestt)
-```
-
-### \textcolor{violet}{t-test of Typical group}
-```{r,echo=FALSE}
-print(TYPtestt)
-```
-
-##\textcolor{blue}{A t-test to compare accuracy between Dylexia and Typical group}
-```{r,echo=FALSE}
-t.test(DD_acc_tsl,TYP_acc_tsl)
 ```
